# PFE-2026-BS

./: BiotimeViews.txt  Create The main db if there is no docker.txt  Document.doc  Document.rtf  EasyProjectViews.txt  MainDbSQLCode.txt  README.md
backend/: .env  .gitignore  docker-compose.yml  pyproject.toml  seed.sql
backend/alembic/: env.py
backend/alembic/versions/: 177aa8278058_adjust_the_lenght_of_name_and_.py  34f2f9b69d53_make_identifier_not_unique_on_project_.py  58ca9e733135_add_created_on_column_for_user_table.py  642bda5cde83_agjust_the_lenght_of_name_and_.py  6d75d571f0aa_make_the_user_not_unique_on_user_table.py  8cd474c4a0c8_add_username_column_on_user_table_and_.py  aa2790d4654b_update_the_roles_for_the_user.py  bdb89c5eb825_create_other_tables.py  e9c9e4651331_create_user_table.py
backend/app/: main.py
backend/app/core/: __init__.py  config.py  dependcies.py
backend/app/core/ETL/: __init__.py
backend/app/core/ETL/Extractors/: BiotimeExtractor.py  EasyProjectExtractor.py  __init__.py
backend/app/core/ETL/Loaders/: LoaderService.py
backend/app/core/ETL/Piplines/: ETL_AttEvents.py  ETL_Attendance.py  ETL_Employee.py  ETL_EmployeeAttEvents.py  ETL_Members.py  ETL_Projects.py  ETL_department.py  MainPipeline.py
backend/app/core/ETL/Transformers/: TransformerService.py
backend/app/core/auth/: __init__.py  jwt.py  security.py
backend/app/core/database/: __init__.py  async_db.py  sync_db.py
backend/app/core/database/models/: Project.py  User.py  __init__.py  (+2 more)
backend/app/core/external_database/: BiotimeDb.py  EasyProjectDb.py  __init__.py
(+162 files in other folders)
